--- a/compose.nvidia.local.yaml
+++ b/compose.nvidia.local.yaml
@@ -10,6 +10,7 @@ x-zimagi-build: &zimagi-build
 
 x-zimagi-build-args: &zimagi-build-args
   ZIMAGI_ENVIRONMENT: ${ZIMAGI_ENVIRONMENT}
+  ZIMAGI_USER_UID: ${ZIMAGI_USER_UID}
 
 x-zimagi-env: &zimagi-env
   <<: *zimagi-build-args
@@ -37,7 +38,6 @@ x-zimagi-service-shared: &zimagi-service-shared
     - ./.env
   networks:
     - zimagi-net
-  user: ${ZIMAGI_USER_UID}:zimagi
   group_add:
     - ${ZIMAGI_DOCKER_GID}
   volumes:
