--- a/app/templates/user/role/index.yml
+++ b/app/templates/user/role/index.yml
@@ -8,5 +8,5 @@ variables:
 
 map:
     spec.yml:
-        target: spec/roles.yml
+        target: spec/auto/roles.yml
         location: roles.<{ name }>
