--- a/app/templates/field/boolean/index.yml
+++ b/app/templates/field/boolean/index.yml
@@ -17,5 +17,5 @@ variables:
 
 map:
     spec.yml:
-        target: spec/data/<{ data_name }>.yml
+        target: spec/auto/data/<{ data_name }>.yml
         location: data.<{ data_name }>.fields.<{ field_name }>
