--- a/app/spec/commands/platform.yml
+++ b/app/spec/commands/platform.yml
@@ -1,13 +1,18 @@
 command:
   info:
     base: platform
-    priority: 5
+    priority: -5
   version:
     base: platform
     priority: -4
+  build:
+    base: platform
+    api_enabled: false
+    require_db: false
+    priority: -3
   test:
     base: platform
-    priority: -3
+    priority: -2
     parameters:
       test_types:
         parser: variables
