--- a/compose.nvidia.test.yaml
+++ b/compose.nvidia.test.yaml
@@ -85,9 +85,9 @@ services:
       - '5123:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
-      interval: 30s
-      timeout: 30s
-      retries: 4
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   data-api:
     <<: *zimagi-service
@@ -96,14 +96,24 @@ services:
       - '5323:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
-      interval: 30s
-      timeout: 30s
-      retries: 4
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   controller:
     <<: *zimagi-service
     entrypoint: zimagi-controller
+    healthcheck:
+      test: ['CMD-SHELL', 'test -f /var/local/zimagi/controller || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   scheduler:
     <<: *zimagi-service
     entrypoint: zimagi-scheduler
+    healthcheck:
+      test: ['CMD-SHELL', 'test -f /var/local/zimagi/scheduler || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
