Updates to the local Docker Compose set up.

--- a/env/secret.example
+++ b/env/secret.example
@@ -1,15 +1,6 @@
-ZIMAGI_APP_NAME=zimagi
+# Common
 
 ZIMAGI_SECRET_KEY=20181105
-ZIMAGI_ADMIN_USER=admin
-ZIMAGI_DEFAULT_ADMIN_TOKEN=999999999
-
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=999999999
-ZIMAGI_POSTGRES_USER=postgres
-ZIMAGI_POSTGRES_PASSWORD=999999999
-
-ZIMAGI_REDIS_PASSWORD=999999999
 
 ZIMAGI_EMAIL_HOST=
 ZIMAGI_EMAIL_HOST_USER=
@@ -21,4 +12,12 @@ ZIMAGI_EMAIL_SUBJECT_PREFIX='<zimagi test> '
 ZIMAGI_GITHUB_ORG=
 ZIMAGI_GITHUB_TOKEN=
 
+ZIMAGI_DEFAULT_MODULES=[{"provider":"git","remote":"https://github.com/zimagi/factory.git","reference":"main"}]
+
+# Client
+
 ZIMAGI_CLIENT_CACHE_LIFETIME=60
+
+# AI
+
+OPENROUTER_API_KEY=
