--- a/compose.nvidia.local.yaml
+++ b/compose.nvidia.local.yaml
@@ -25,9 +25,9 @@ x-zimagi-env: &zimagi-env
   ZIMAGI_RUNTIME_IMAGE: zimagi/server:nvidia-${ZIMAGI_ENVIRONMENT}
   ZIMAGI_DOCKER_RUNTIME: nvidia
 
-  ZIMAGI_POSTGRES_HOST: postgresql
+  ZIMAGI_POSTGRES_HOST: postgresql-zimagi
   ZIMAGI_POSTGRES_PORT: 5432
-  ZIMAGI_REDIS_HOST: redis
+  ZIMAGI_REDIS_HOST: redis-zimagi
   ZIMAGI_REDIS_PORT: 6379
 
 x-zimagi-service-shared: &zimagi-service-shared
@@ -45,8 +45,8 @@ x-zimagi-service-shared: &zimagi-service-shared
     - ./package:/usr/local/share/zimagi-client
     - ./lib:/usr/local/lib/zimagi
   depends_on:
-    - postgresql
-    - redis
+    - postgresql-zimagi
+    - redis-zimagi
 
 x-zimagi-service: &zimagi-service
   <<: *zimagi-service-shared
