--- a/compose.nvidia.test.yaml
+++ b/compose.nvidia.test.yaml
@@ -26,9 +26,9 @@ x-zimagi-env: &zimagi-env
   ZIMAGI_RUNTIME_IMAGE: zimagi/server:nvidia-${ZIMAGI_ENVIRONMENT}
   ZIMAGI_DOCKER_RUNTIME: nvidia
 
-  ZIMAGI_POSTGRES_HOST: postgresql
+  ZIMAGI_POSTGRES_HOST: postgresql-zimagi
   ZIMAGI_POSTGRES_PORT: 5432
-  ZIMAGI_REDIS_HOST: redis
+  ZIMAGI_REDIS_HOST: redis-zimagi
   ZIMAGI_REDIS_PORT: 6379
 
 x-zimagi-service-shared: &zimagi-service-shared
@@ -44,8 +44,8 @@ x-zimagi-service-shared: &zimagi-service-shared
     - /var/run/docker.sock:/var/run/docker.sock
     - ./lib:/usr/local/lib/zimagi
   depends_on:
-    - postgresql
-    - redis
+    - postgresql-zimagi
+    - redis-zimagi
 
 x-zimagi-service: &zimagi-service
   <<: *zimagi-service-shared
