--- a/compose.standard.test.yaml
+++ b/compose.standard.test.yaml
@@ -23,9 +23,9 @@ x-zimagi-env: &zimagi-env
   ZIMAGI_RUNTIME_IMAGE: zimagi/server:${ZIMAGI_ENVIRONMENT}
   ZIMAGI_DOCKER_RUNTIME: standard
 
-  ZIMAGI_POSTGRES_HOST: postgresql
+  ZIMAGI_POSTGRES_HOST: postgresql-zimagi
   ZIMAGI_POSTGRES_PORT: 5432
-  ZIMAGI_REDIS_HOST: redis
+  ZIMAGI_REDIS_HOST: redis-zimagi
   ZIMAGI_REDIS_PORT: 6379
 
 x-zimagi-service-shared: &zimagi-service-shared
@@ -41,8 +41,8 @@ x-zimagi-service-shared: &zimagi-service-shared
     - /var/run/docker.sock:/var/run/docker.sock
     - ./lib:/usr/local/lib/zimagi
   depends_on:
-    - postgresql
-    - redis
+    - postgresql-zimagi
+    - redis-zimagi
 
 x-zimagi-service: &zimagi-service
   <<: *zimagi-service-shared
