Eliminating the default dependency of the factory module in the Docker Compose secret.example file.

--- a/env/secret.example
+++ b/env/secret.example
@@ -12,7 +12,7 @@ ZIMAGI_EMAIL_SUBJECT_PREFIX='<zimagi test> '
 ZIMAGI_GITHUB_ORG=
 ZIMAGI_GITHUB_TOKEN=
 
-ZIMAGI_DEFAULT_MODULES=[{"provider":"git","remote":"https://github.com/zimagi/factory.git","reference":"main"}]
+ZIMAGI_DEFAULT_MODULES='[]'
 
 # Client
 
