--- a/app/spec/roles.yml
+++ b/app/spec/roles.yml
@@ -15,3 +15,4 @@ roles:
   data-auditor: Data auditor (viewing privileges over all environment datasets)
   chat-admin: Chat server administrator (full privileges over all chat messages)
   chat-user: Chat server user (create and maintain chats)
+  ai-user: AI system user for agents (default access to MCP commands)
