Adding a GITHUB_USER configuration in the core settings file.

--- a/env/secret.example
+++ b/env/secret.example
@@ -9,8 +9,9 @@ ZIMAGI_EMAIL_PORT=587
 ZIMAGI_EMAIL_USE_TLS=true
 ZIMAGI_EMAIL_SUBJECT_PREFIX='<zimagi test> '
 
-ZIMAGI_GITHUB_ORG=
+ZIMAGI_GITHUB_USER=
 ZIMAGI_GITHUB_TOKEN=
+ZIMAGI_GITHUB_ORG=
 
 ZIMAGI_DEFAULT_MODULES='[]'
 
