--- a/app/spec/plugins/sentence_parser.yml
+++ b/app/spec/plugins/sentence_parser.yml
@@ -1,21 +1,26 @@
 plugin:
-    sentence_parser:
-        base: base
-        interface:
-            get_max_sentence_length:
-                returns: str
-            split:
-                params:
-                    text: str
-                returns: list
-        option:
-            device:
-                type: str
-                help: "Device to run setence parsing process"
-                default: null
-            max_sentence_length:
-                type: int
-                help: "Maximum length of parsed sentence"
-                default: 3500
+  sentence_parser:
+    base: base
+    interface:
+      split:
+        params:
+          text: str
+        returns: list
 
-        providers: {}
+    option:
+      max_sentence_length:
+        type: int
+        help: 'Maximum length of parsed sentence'
+        default: 3500
+
+    providers:
+      spacy:
+        option:
+          model:
+            type: str
+            help: 'Sentence parser model name'
+            default: en_core_web_lg
+          validate:
+            type: bool
+            help: 'Whether or not to check sentences for nouns, verbs, and propositions'
+            default: true
