--- a/app/requirements.client.txt
+++ b/app/requirements.client.txt
@@ -1,6 +1,9 @@
 # Terminal utilities
 terminaltables==3.1.10
 colorful==0.5.6
+rich==14.0.0
+textual==3.5.0
+textual-textarea==0.15.0
 
 # Core application
 django==5.2.1
