--- a/app/requirements.client.txt
+++ b/app/requirements.client.txt
@@ -2,8 +2,9 @@
 terminaltables==3.1.10
 colorful==0.5.6
 rich==14.0.0
-textual==3.5.0
-textual-textarea==0.15.0
+textual[syntax]==3.6.0
+textual-dev==1.7.0
+pyperclip==1.9.0
 
 # Core application
 django==5.2.1
