Updating the cell agent options in the base command and command mixin specifications.

--- a/app/spec/base/command.yml
+++ b/app/spec/base/command.yml
@@ -89,25 +89,26 @@ command_base:
   cell:
     base: agent
     mixins: [cell, chat]
-    groups_allowed: [admin, chat-user, ai-user]
+    groups_allowed: [admin]
     background: false
     parse:
       - lifetime
       - pause
+      - goal
+      - rules
+      - user
+      - chat_key
       - sensor
-      - sensor_key
       - sensor_data
       - sensor_data_id
       - sensor_filters
       - message_fields
       - message_field_labels
-      - goal
-      - rules
       - system_template
       - tools_template
       - template
-      - chat_key
       - model_provider
       - model_options
-      - channel
       - tools
+      - channel
+      - channel_field_map
