--- a/app/spec/mixins/command.yml
+++ b/app/spec/mixins/command.yml
@@ -164,30 +164,14 @@ command_mixins:
         help: 'cell rules'
         value_label: TEXT
         tags: [agent, instruction]
-      system_template:
+      user:
         parser: variable
         type: str
         optional: true
-        default: system
-        help: 'cell instruction system prompt template'
-        value_label: NAME
-        tags: [agent, template]
-      tools_template:
-        parser: variable
-        type: str
-        optional: true
-        default: tools
-        help: 'cell instruction tools prompt template'
-        value_label: NAME
-        tags: [agent, template]
-      template:
-        parser: variable
-        type: str
-        optional: true
-        default: default
-        help: 'cell instruction prompt template'
-        value_label: NAME
-        tags: [agent, template]
+        default: admin
+        help: 'cell run as user (defaults to admin)'
+        value_label: USER_NAME
+        tags: [agent, experience, access]
       chat_key:
         parser: variable
         type: str
@@ -196,26 +180,12 @@ command_mixins:
         help: 'cell chat key'
         value_label: IDENTIFIER
         tags: [agent, experience]
-      channel:
-        parser: variable
-        type: str
-        optional: false
-        help: 'cell output communication channel'
-        value_label: CHANNEL
-        tags: [agent, communication]
       sensor:
         parser: variable
         type: str
         optional: false
         help: 'cell sensory communication channel'
         value_label: CHANNEL
-        tags: [agent, communication]
-      sensor_key:
-        parser: variable
-        type: str
-        optional: true
-        help: 'cell sensory communication channel state key (defaults to channel)'
-        value_label: IDENTIFIER
         tags: [agent, communication]
       sensor_data:
         parser: variable
@@ -247,6 +217,30 @@ command_mixins:
         parser: fields
         optional: true
         tags: [agent, communication]
+      system_template:
+        parser: variable
+        type: str
+        optional: true
+        default: system
+        help: 'cell instruction system prompt template'
+        value_label: NAME
+        tags: [agent, template]
+      tools_template:
+        parser: variable
+        type: str
+        optional: true
+        default: tools
+        help: 'cell instruction tools prompt template'
+        value_label: NAME
+        tags: [agent, template]
+      template:
+        parser: variable
+        type: str
+        optional: true
+        default: default
+        help: 'cell instruction prompt template'
+        value_label: NAME
+        tags: [agent, template]
       model_provider:
         parser: variable
         type: str
@@ -266,6 +260,17 @@ command_mixins:
         help: 'one or more MCP tool names'
         value_label: NAME
         tags: [agent, action]
+      channel:
+        parser: variable
+        type: str
+        optional: false
+        help: 'cell output communication channel'
+        value_label: CHANNEL
+        tags: [agent, communication]
+      channel_field_map:
+        parser: fields
+        optional: true
+        tags: [agent, communication]
   group:
     class: GroupMixin
     meta:
