--- a/app/spec/mixins/command.yml
+++ b/app/spec/mixins/command.yml
@@ -150,21 +150,21 @@ command_mixins:
   cell:
     class: CellMixin
     parameters:
-      goal:
+      agent_goal:
         parser: variable
         type: str
         optional: false
         help: 'cell goal'
         value_label: TEXT
         tags: [agent, instruction]
-      rules:
+      agent_rules:
         parser: variable
         type: str
         optional: false
         help: 'cell rules'
         value_label: TEXT
         tags: [agent, instruction]
-      user:
+      agent_user:
         parser: variable
         type: str
         optional: true
@@ -172,7 +172,7 @@ command_mixins:
         help: 'cell run as user (defaults to admin)'
         value_label: USER_NAME
         tags: [agent, experience, access]
-      chat_key:
+      agent_chat_key:
         parser: variable
         type: str
         default: global
@@ -180,21 +180,21 @@ command_mixins:
         help: 'cell chat key'
         value_label: IDENTIFIER
         tags: [agent, experience]
-      sensor:
+      agent_sensor:
         parser: variable
         type: str
         optional: false
         help: 'cell sensory communication channel'
         value_label: CHANNEL
         tags: [agent, communication]
-      sensor_data:
+      agent_sensor_data:
         parser: variable
         type: str
         optional: true
         help: 'cell sensory data type (if sensor instance and not data:save:* channel)'
         value_label: TYPE
         tags: [agent, communication]
-      sensor_data_id:
+      agent_sensor_data_id:
         parser: variable
         type: str
         default: id
@@ -202,22 +202,22 @@ command_mixins:
         help: 'cell sensory data type id field (if sensor data and multi-field message)'
         value_label: TYPE
         tags: [agent, communication]
-      sensor_filters:
+      agent_sensor_filters:
         parser: fields
         optional: true
         tags: [agent, communication]
-      message_fields:
+      agent_message_fields:
         parser: variables
         type: str
         optional: false
         help: 'one or more data fields to pass to the model'
         value_label: NAME
         tags: [agent, communication]
-      message_field_labels:
+      agent_message_field_labels:
         parser: fields
         optional: true
         tags: [agent, communication]
-      system_template:
+      agent_system_template:
         parser: variable
         type: str
         optional: true
@@ -225,7 +225,7 @@ command_mixins:
         help: 'cell instruction system prompt template'
         value_label: NAME
         tags: [agent, template]
-      tools_template:
+      agent_tools_template:
         parser: variable
         type: str
         optional: true
@@ -233,7 +233,7 @@ command_mixins:
         help: 'cell instruction tools prompt template'
         value_label: NAME
         tags: [agent, template]
-      template:
+      agent_template:
         parser: variable
         type: str
         optional: true
@@ -241,7 +241,7 @@ command_mixins:
         help: 'cell instruction prompt template'
         value_label: NAME
         tags: [agent, template]
-      model_provider:
+      agent_model_provider:
         parser: variable
         type: str
         default: openrouter/deepseek-r1
@@ -249,25 +249,25 @@ command_mixins:
         help: 'cell model plugin provider'
         value_label: NAME
         tags: [agent, model]
-      model_options:
+      agent_model_options:
         parser: fields
         optional: true
         tags: [agent, model]
-      tools:
+      agent_tools:
         parser: variables
         type: str
         optional: false
         help: 'one or more MCP tool names'
         value_label: NAME
         tags: [agent, action]
-      channel:
+      agent_channel:
         parser: variable
         type: str
         optional: false
         help: 'cell output communication channel'
         value_label: CHANNEL
         tags: [agent, communication]
-      channel_field_map:
+      agent_channel_field_map:
         parser: fields
         optional: true
         tags: [agent, communication]
