--- a/app/requirements.server.txt
+++ b/app/requirements.server.txt
@@ -67,6 +67,7 @@ django-celery-beat==2.8.1
 redis==6.1.0
 django-redis==5.4.0
 hiredis==3.1.1
+qdrant-client==1.14.3
 
 # Machine Learning
 transformers==4.51.3
