--- a/compose.standard.local.yaml
+++ b/compose.standard.local.yaml
@@ -26,6 +26,8 @@ x-zimagi-env: &zimagi-env
   ZIMAGI_POSTGRES_PORT: 5432
   ZIMAGI_REDIS_HOST: redis-zimagi
   ZIMAGI_REDIS_PORT: 6379
+  ZIMAGI_QDRANT_HOST: qdrant
+  ZIMAGI_QDRANT_PORT: 6333
 
 x-zimagi-service-shared: &zimagi-service-shared
   env_file:
