Adding dimensions and format options for all encoder plugin providers.

--- a/app/spec/plugins/encoder.yml
+++ b/app/spec/plugins/encoder.yml
@@ -11,6 +11,15 @@ plugin:
       model:
         type: str
         help: 'Encoder model name'
+    option:
+      dimensions:
+        type: int
+        help: 'Embedding dimensions'
+        default: 768
+      format:
+        type: str
+        help: 'Embedding format'
+        default: float
 
     providers:
       transformer:
